@@ -1,1 +1,0 @@
-debian/install/shared/@LIBDIR@/girepository-1.0/ usr/lib/
