@@ -1,3 +1,0 @@
-# from the shared flavor
-debian/install/shared/usr/bin/gtk3-demo usr/bin
-debian/install/shared/usr/share/gtk-3.0/demo usr/share/gtk-3.0
