@@ -1,2 +1,0 @@
-# from the shared flavor
-debian/install/shared/@MODULES_BASE_PATH@/engines/*.so @MODULES_BASE_PATH@/engines
