@@ -1,2 +1,0 @@
-usr/share/doc/@COMMON_PKG@/NEWS.gz usr/share/doc/@PIXBUF_PKG@/NEWS.gz
-usr/share/doc/@COMMON_PKG@/README usr/share/doc/@PIXBUF_PKG@/README
