@@ -1,1 +1,0 @@
-debian/install/shared/@LIBDIR@/libgail*.so.* @LIBDIR@
