@@ -1,2 +1,0 @@
-# from the optimised flavor
-debian/install/opt/@LIBDIR@/libgail*.so.* @OPTLIBDIR@
