@@ -1,1 +1,0 @@
-debian/install/shared/@LIBDIR@/gtk-3.0/modules/*.so @LIBDIR@/gtk-3.0/modules
