@@ -1,3 +1,0 @@
-# from the optimised flavor
-debian/install/opt/@LIBDIR@/libgtk*.so.* @OPTLIBDIR@
-debian/install/opt/@LIBDIR@/libgdk*.so.* @OPTLIBDIR@
