@@ -1,4 +1,0 @@
-# from the shared flavor
-docs/reference/gtk/gtk-update-icon-cache.1 usr/share/man/man1
-docs/reference/gtk/gtk-query-immodules-3.0.1 usr/share/man/man1
-debian/update-icon-caches usr/sbin
