@@ -1,8 +1,0 @@
-# from the shared flavor
-debian/install/shared/usr/include/gtk* usr/include
-debian/install/shared/@LIBDIR@/libg?k*.so @LIBDIR@
-debian/install/shared/@LIBDIR@/pkgconfig/g?k* @LIBDIR@/pkgconfig
-debian/install/shared/usr/share/aclocal usr/share
-debian/install/shared/usr/share/gir-1.0 usr/share
-# from the static flavor
-debian/install/static/@LIBDIR@/libg?k*.a @LIBDIR@
